# hyprshade

./: .clang-format  .editorconfig  LICENSE  PACKAGING.md  README.md  SCREENSHOTS.md  completion.sh  pdm_build.py  pyproject.toml  todo.md  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: aur.yml  ci.yml  publish.yml  python-package.yml  python-publish.yml  release.yml  test.yml
examples/: README.md  config.toml
hyprshade/: __main__.py  cli.py  click_utils.py  click_utils_test.py  config.py  constants.py  helpers.py  hyprctl.py  shader.py  shader_test.py  utils.py  utils_test.py
scripts/: release.sh
shaders/: README.md  blue-light-filter.glsl  blue-light-filter.glsl.mustache  color-filter.glsl.mustache  grayscale.glsl.mustache  monochromatic.glsl  vibrance.glsl  vibrance.glsl.mustache
src/: config.py  helpers.py  main.py  utils.py
src/hyprshade/: __main__.py  cli.py  click_utils.py  config.py  helpers.py  hyprctl.py  shader.py  utils.py
src/hyprshade/cli/: __init__.py  auto.py  current.py  install.py  ls.py  off.py  on.py  toggle.py  utils.py
src/hyprshade/config/: __init__.py  core.py  model.py  schedule.py  types.py  utils.py
src/hyprshade/shader/: __init__.py  core.py  dirs.py  hyprctl.py
src/hyprshade/template/: constants.py  mustache.py
src/hyprshade/utils/: base64.py  dictionary.py  fs.py  path.py  time.py  xdg.py
tests/: click_utils_test.py  conftest.py  helpers.py  helpers_test.py  hyprctl_test.py  shader_test.py  test_isolation.py  types.py  utils_test.py
tests/cli/: conftest.py
tests/cli/auto/: test_auto.py
tests/cli/common/: test_vars_option.py
tests/cli/common/__snapshots__/: test_vars_option.ambr
tests/cli/current/: test_current.py
tests/cli/install/: test_install.py
tests/cli/ls/: test_ls.py
tests/cli/off/: test_off.py
tests/cli/on/: test_on.py
tests/cli/on/__snapshots__/: test_on.ambr
tests/cli/toggle/: test_toggle.py
tests/cli/toggle/__snapshots__/: test_toggle.ambr
tests/cli/utils/: test_click_utils.py  test_completion.py  test_utils.py
tests/config/: test_config.py  test_model.py  test_paths.py  test_schedule.py
tests/helpers/: __init__.py  systemd_unit_parser.py
tests/shader/: test_dirs.py  test_hyprctl.py  test_shader.py
tests/template/: test_mustache.py
tests/utils/: test_base64.py  test_dictionary.py  test_fs.py  test_path.py  test_time.py  test_utils.py  test_xdg.py
