[project]
name = "hyprshade"
version = "0.9.2"
description = "Hyprland shade configuration tool"
authors = [{ name = "John Bernard", email = "loqusion@gmail.com" }]
dependencies = ["more-itertools<10.0.0,>=9.1.0", "click<9.0.0,>=8.1.6"]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
hyprshade = "hyprshade.cli:main"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src/hyprshade", "examples", "shaders"]

[tool.pdm.dev-dependencies]
dev = ["black>=23.7.0", "mypy>=1.5.1", "ruff>=0.0.285"]
test = ["pytest>=7.4.0", "coverage>=7.3.0"]


[tool.ruff]
extend-select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "ERA", # flake8-eradicate/eradicate
  "I",   # isort
  "N",   # pep8-naming
  "PGH", # pygrep
  "PIE", # flake8-pie
  "PT",  # flake8-pytest-style
  "RUF", # ruff checks
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "UP",  # pyupgrade
  "YTT", # flake8-2020
]

[tool.mypy]
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = ["-r", "a", "--import-mode=importlib", "-m", "not hyprland"]
markers = ["hyprland: Tests that require hyprland to be running"]
